# linux-debug-training

./: README.md
Examples/KASAN/: insert_module.sh  kasan_demo.c  remove_module.sh
Examples/KCSAN/: ReadMe.md  insert_module.sh  kcsan_race_demo.c  remove_module.sh
Examples/KFENCE/: insert_module.sh  kfence_demo.c  remove_module.sh
Examples/KMEMLEAK/: ReadME.md  clean.sh  insert_module.sh  kmemleak_demo.c  remove_module.sh
Examples/ProcessAndThreads/: CMakeLists.txt  README  build_example.sh  clean.sh  thread.c
Examples/PythonAndGDB/: CMakeLists.txt  PythonGDBExample.c  build_python_gdb_example.sh  clean.sh
Examples/SharedLibGDB/: build.sh  clean.sh  main.c  mylib.c  mylib.h
Examples/UBSAN/: insert_module_test_case_2.sh  remove_module.sh  ubsan_demo.c
Examples/args/: CMakeLists.txt  build_args_example.sh  clean.sh  main.c
Examples/cachegrind/: CMakeLists.txt  build_cachegrind.sh  clean.sh  main.c
Examples/cpu-freq/: cpu-freq.sh
Examples/crash_kernel_module/: Makefile  crash-module.c
Examples/dynamic_debug/: CleanMe.sh  ReadMe.md  dynamic_debug_example.c  insert_module.sh  remove_module.sh
Examples/ftracescripts/: setup_function_graph_tracer.sh  setup_function_trace.sh
Examples/gdb_demo/: ReadMe.md  gdb_demo.c  insert_module.sh  remove_module.sh  test_module.sh
Examples/heaptrack/: build.sh  heaptrack_demo.c
Examples/helloworld/: build_hello_world.sh  main.c
Examples/helloworldkernelmodule/: README  ReadMe  hello.c
Examples/helloworldsharedlibrary/: CMakeLists.txt  build_shared_library.sh  clean.sh
Examples/helloworldsharedlibrary/include/my_library/: my_shared_library.h
Examples/helloworldsharedlibrary/src/: my_shared_library.c
Examples/interruptexample/: ReadMe  clean.sh  interruptexample.c  interruptexample.h
Examples/kprobe/: disable_probes.sh  enable_probe.sh  kprobe.c  register_one_probe.sh  register_probe.sh  show_trace.sh  unregister_probes.sh
Examples/libefence/: CMakeLists.txt  build.sh  clean.sh  main.c
Examples/linkingsharedlibrary/: CMakeLists.txt  build_linking_example.sh  clean.sh  linked_shared_library_example  main.c
Examples/lockdep/: ReadMe.md  insert_module.sh  lockdep_demo.c  remove_module.sh
Examples/lttng/: build.sh  clean.sh  preload_example.sh  run_lttng_sample.sh  sample_application.c  sample_application_tp.c  sample_application_tp.h  trace_kernel_event.sh  trace_system_call.sh
Examples/massif/: build.sh  massif.c  run_massif.sh
Examples/matrix_multiplication/: build.sh  matrix_avx2_basic.c  matrix_avx2_optimized.c  matrix_traditional.c
Examples/memory/: CMakeLists.txt  build_memory.sh  clean.sh  main.c
Examples/memory_leak/: CMakeLists.txt  build_memleak.sh  clean.sh  main.c
Examples/memusage/: build.sh  main.c
Examples/optimization/: CMakeLists.txt  build_example.sh  clean.sh  main.c
Examples/perf_example/: CMakeLists.txt  clean.sh  disable_func_trace.sh  main.c  (+7 more)
Examples/sharedmemory/: CMakeLists.txt  README  build_shared_memory.sh  clean.sh  read_example.c  write_example.c
References/: Building_perf.md  building_course_examples.md  deep_dive_into_memory.md  understanding_shared_libraries_in_memory.md  using_vscode.md  vmlinux-ubuntu-22.04.md
(+36 files in other folders)
